Added a referents section. Logic is kinda de same of project section.

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Jehú Frayle</title>
 </head>
 
-<body class="bg-gradient-to-r from-violet-900 to-purple-900 text-slate-100">
+<body class="bg-gradient-to-r from-violet-900 to-purple-900 text-cyan-50">
     <header
         class="w-full h-auto bg-gradient-to-r from-violet-800 to-purple-800 px-2 flex justify-between fixed top-0 z-10">
         <a href="https:jehufrayle.com" class="h-full my-auto p-2">Jehú Frayle</a>
@@ -26,7 +26,7 @@
             </svg>
         </button>
     </header>
-    <main class="mt-8 mx-4 lg:mx-8">
+    <main class="mt-8 mx-4 lg:mx-16">
         <section id="Home" class="flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row">
 
             <div id="Avatar" class="relative w-32 h-32 lg:w-64 lg:h-64 mx-auto my-2">
@@ -35,15 +35,15 @@
                     class="relative w-full h-full rounded-full outline outline-sky-500 outline-offset-2t" />
             </div>
             <div class="flex flex-col space-y-3 m-auto">
-                <p class="text-m text-left">Hello there,</p>
-                <h1 class="text-6xl font-bold italic">This is Jehú Frayle</h1>
-                <p class="text-lg text-center tracking-widest w-full mx-auto lg:tracking-[.75rem]">JavaScript Developer
+                <p class="text-lg text-left">Hello there,</p>
+                <h1 class="p-4 text-7xl font-bold italic">This is <span class="pr-4 bg-clip-text text-transparent bg-gradient-to-r from-[#F7E018] to-[#2D79C7]"><span class="pr-2 lg:p-0">Jehu</span> Frayle</span></h1>
+                <p class="text-xl text-center tracking-widest w-full mx-auto lg:tracking-[.75rem] text-[#F7E018]">JavaScript Developer
                 </p>
             </div>
         </section>
         <hr>
         <section id="About" class="text-md mx-auto space-y-4 p-4 pt-8">
-            <h2 class="text-xl text-center my-2">About me</h2>
+            <h2 class="text-2xl text-center my-2">About me</h2>
             <p>I am Jehú Frayle, an IT Student with proficiency in web development. I'm building reliable, functional
                 and fully responsive websites and applications.
             </p>
@@ -62,9 +62,18 @@
             </a>
         </section>
         <section id="Projects" class="p-2 pt-8 space-y-4">
-            <h2 class="text-xl text-center my-2">Projects</h2>
+            <h2 class="text-2xl text-center my-2">Projects</h2>
             <!-- Aquí van los proyectos con TS -->
             <div id="ProjectsTS" class="p-2 w-full h-auto flex flex-wrap justify-center space-8"></div>
+        </section>
+        <section id="Referents" class="p-4 space-y-4">
+            <h2 class="text-2xl text-center my-2">My referents</h2>
+            <p class="text-lg font-bold">People I follow, admire and learn from</p>
+            <p class="w-5/6">I could be something technical, social or just a soft skill, but I've learned something from each and everyone of them.
+                That's why I'm grateful and I like to dedicate this little space to let you know that in the future <b>I'm pointing to be like them</b>
+                in some or other way.
+            </p>
+            <div id="ReferentsTS" class=" w-5/6 mx-auto h-auto flex flex-wrap justify-center space-8"></div>
         </section>
         <section id="Contact" class="mt-8">
             <!-- <div>
