Added a scroll in the referents section

--- a/public/index.html
+++ b/public/index.html
@@ -36,8 +36,8 @@
             </div>
             <div class="flex flex-col space-y-3 m-auto">
                 <p class="text-lg text-left">Hello there,</p>
-                <h1 class="p-4 text-7xl font-bold italic">This is <span class="pr-4 bg-clip-text text-transparent bg-gradient-to-r from-[#F7E018] to-[#2D79C7]"><span class="pr-2 lg:p-0">Jehu</span> Frayle</span></h1>
-                <p class="text-xl text-center tracking-widest w-full mx-auto lg:tracking-[.75rem] text-[#F7E018]">JavaScript Developer
+                <h1 class="p-4 text-7xl font-bold italic">This is <span class="pr-4 bg-clip-text text-transparent bg-gradient-to-r from-[#F7DF1E] to-[#3178C6]"><span class="pr-2 lg:p-0">Jehú</span> Frayle</span></h1>
+                <p class="text-xl text-center tracking-widest w-full mx-auto lg:tracking-[.75rem] text-[#F7DF1E]">JavaScript Developer
                 </p>
             </div>
         </section>
@@ -64,7 +64,7 @@
         <section id="Projects" class="p-2 pt-8 space-y-4">
             <h2 class="text-2xl text-center my-2">Projects</h2>
             <!-- Aquí van los proyectos con TS -->
-            <div id="ProjectsTS" class="p-2 w-full h-auto flex flex-wrap justify-center space-8"></div>
+            <div id="ProjectsTS" class="p-2 w-full h-auto flex flex-wrap justify-center lg:space-8"></div>
         </section>
         <section id="Referents" class="p-4 space-y-4">
             <h2 class="text-2xl text-center my-2">My referents</h2>
@@ -73,7 +73,7 @@
                 That's why I'm grateful and I like to dedicate this little space to let you know that in the future <b>I'm pointing to be like them</b>
                 in some or other way.
             </p>
-            <div id="ReferentsTS" class=" w-5/6 mx-auto h-auto flex flex-wrap justify-center space-8"></div>
+            <div id="ReferentsTS" class="w-full mx-auto h-auto flex overflow-x-scroll overscroll-x-contain snap-mandatory snap-x space-8"></div>
         </section>
         <section id="Contact" class="mt-8">
             <!-- <div>
