--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <title>Jehú Frayle</title>
 </head>
 
-<body class="bg-gradient-to-r from-violet-900 to-purple-900 text-cyan-50">
+<body class="bg-gradient-to-r from-slate-900 via-purple-900 to-slate-900 text-cyan-50">
     <header
-        class="w-full h-auto bg-gradient-to-r from-violet-800 to-purple-800 px-2 flex justify-between fixed top-0 z-10">
+        class="w-full h-auto bg-gradient-to-r from-slate-800 via-purple-800 to-slate-800 px-2 flex justify-between fixed top-0 z-10">
         <a href="https:jehufrayle.com" class="h-full my-auto p-2">Jehú Frayle</a>
         <nav id="NavBar" class="lg:flex lg:w-auto lg:static lg:flex-row lg:bg-transparent lg:text-inherit lg:p-0
          backdrop-blur-sm bg-white/30 p-2 text-slate-900 rounded-sm divide-y divide-slate-800 divide-dotted lg:divide-none flex-col fixed top-16 left-16 align-center 
@@ -27,6 +27,7 @@
         </button>
     </header>
     <main class="mt-8 mx-4 lg:mx-16">
+
         <section id="Home" class="flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row">
 
             <div id="Avatar" class="relative w-32 h-32 lg:w-64 lg:h-64 mx-auto my-2">
@@ -36,66 +37,83 @@
             </div>
             <div class="flex flex-col space-y-3 m-auto">
                 <p class="text-lg text-left">Hello there,</p>
-                <h1 class="p-4 text-7xl font-bold italic">This is <span class="pr-4 bg-clip-text text-transparent bg-gradient-to-r from-[#F7DF1E] to-[#3178C6]"><span class="pr-2 lg:p-0">Jehú</span> Frayle</span></h1>
-                <p class="text-xl text-center tracking-widest w-full mx-auto lg:tracking-[.75rem] text-[#F7DF1E]">JavaScript Developer
+                <h1 class="p-4 text-7xl font-bold italic">This is <span
+                        class="pr-4 bg-clip-text text-transparent bg-gradient-to-r from-[#F7DF1E] to-[#3178C6]"><span
+                            class="pr-2 lg:p-0">Jehú</span> Frayle</span></h1>
+                <p class="text-xl text-center tracking-widest w-full mx-auto lg:tracking-[.75rem] text-[#F7DF1E]">
+                    JavaScript Developer
                 </p>
             </div>
         </section>
+
         <hr>
+
         <section id="About" class="text-md mx-auto space-y-4 p-4 pt-8">
             <h2 class="text-2xl text-center my-2">About me</h2>
-            <p>I am Jehú Frayle, an IT Student with proficiency in web development. I'm building reliable, functional
-                and fully responsive websites and applications.
+            <p>I’m Jehú Frayle, an IT student with proficiency in web development. I build functional, reliable, and
+                <strong>fully responsive</strong> websites and applications.
             </p>
-            <p>I build functional and reliable websites and applications using technologies as TypeScript, Reactjs and
-                Webpack. And, of course, I can use the main languages of the web HTML, CSS and JavaScript in their
-                latest versions.
+            <p>I have an unstoppable curiosity, and with optimism and discipline, I’m sure I can build almost anything.
+                For the rest, I’ll need a team, because I think <strong>teamwork</strong> is the key.</p>
+            <p>I’ve learned to use technologies like <strong>TypeScript</strong>,
+                <strong>Tailwindcss</strong>, <strong>Node.js</strong>, etc. And of course, I can use the fundamental
+                technologies of web development: <strong>HTML</strong>, <strong>CSS</strong>, and
+                <strong>JavaScript</strong>.
             </p>
-            <p>I'm currently looking for an opportunity to work in challenging projects to improve my skills
-                and contribute to a team.
-            </p>
-            <p>Are you interested in work with me?</p>
-            <a href="<%=require('../src/assets/JehuFrayle.pdf').default %>" download="JehuFrayle.pdf"
-                class="block w-40 rounded-lg bg-yellow-600 p-2 px-4 my-4 mx-auto text-center font-['Subtitulos'] shadow-md shadow-yellow-400/40
-                hover:scale-125 transition duration-400 ease-in-out">
+            <p>I’m also a fan of <strong>Linux</strong> operating systems. I feel comfortable using the Linux terminal
+                to move through my computer and use CLI applications such as <strong>Git</strong> or <strong>Node
+                    Package Manager</strong>, all this to improve my workflow and be quick when developing.</p>
+            <p>Currently, as you can see, I’m focused on <strong>Frontend</strong> development, but I’m constantly
+                learning different disciplines, so I don’t discard working as a backend or full-stack developer in the
+                future.</p>
+            <p>And that’s it. You can download my CV right below this or let me show you some of my projects.</p>
+            <a href="<%=require('../src/assets/JehuFrayle.pdf').default %>" download="JehuFrayle.pdf" class="block w-40 rounded-lg bg-yellow-600 p-2 px-4 my-4 mx-auto text-center font-['Subtitulos'] shadow-md shadow-yellow-400/40
+                hover:scale-125 hover:translate-y-1 transition duration-400 ease-in-out">
                 Download my CV
             </a>
         </section>
+
         <section id="Projects" class="p-2 pt-8 space-y-4">
             <h2 class="text-2xl text-center my-2">Projects</h2>
-            <!-- Aquí van los proyectos con TS -->
-            <div id="ProjectsTS" class="p-2 w-full h-auto flex flex-wrap justify-center lg:space-8"></div>
-        </section>
-        <section id="Referents" class="p-4 space-y-4">
-            <h2 class="text-2xl text-center my-2">My referents</h2>
-            <p class="text-lg font-bold">People I follow, admire and learn from</p>
-            <p class="w-5/6">I could be something technical, social or just a soft skill, but I've learned something from each and everyone of them.
-                That's why I'm grateful and I like to dedicate this little space to let you know that in the future <b>I'm pointing to be like them</b>
-                in some or other way.
+            <p>
+                Here you can see some of my already deployed projects and try them. If you'd like to read the code you
+                can do it on my
+                <a href="https://github.com/jehufrayle" target="_blank" class="underline">GitHub</a>.
             </p>
-            <div id="ReferentsTS" class="w-full mx-auto h-auto flex overflow-x-scroll overscroll-x-contain snap-mandatory snap-x space-8"></div>
+            <!-- Aquí van los proyectos con TS -->
+            <div id="ProjectsTS" class="p-2 w-full h-auto flex flex-wrap justify-center md:space-8"></div>
         </section>
-        <section id="Contact" class="mt-8">
-            <!-- <div>
-                Formulario de contacto
-            </div> -->
-            <div class="flex w-full justify-evenly" >
-                <a href="https://github.com/JehuFrayle" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                        class="fill-slate-100 hover:fill-slate-400" width="24px" height="24px">
-                        <path fill-rule="evenodd" clip-rule="evenodd"
-                            d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
-                        </path>
-                    </svg>
-                </a>
-                <a href="https://www.linkedin.com/in/jehu-frayle/" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg"
-                        class="fill-slate-100 hover:fill-slate-400" width="24px" height="24px">
-                        <path
-                            d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z">
-                        </path>
-                    </svg>
-                </a>
+
+        <section id="Contact" class="pt-8 p-2 space-y-4">
+            <h2 class="text-2xl text-center my-8">Let us get in touch!</h2>
+            <p>Read the code of my projects, colaborate with me and stay up to my work on GitHub.</p>
+            <p>Add me to your proffesional network at LinkedIn</p>
+            <p>Or reach me at Twitter for a less formal approach.</p>
+            <div class="flex w-full justify-evenly m-4">
+                <div class="flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
+                    <a href="https://github.com/JehuFrayle" target="_blank" class="m-auto w-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="fill-slate-100 hover:fill-slate-400 w-full h-full"
+                            viewBox="0 0 24 24" width="24px" height="24px">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M12.026 2c-5.509 0-9.974 4.465-9.974 9.974 0 4.406 2.857 8.145 6.821 9.465.499.09.679-.217.679-.481 0-.237-.008-.865-.011-1.696-2.775.602-3.361-1.338-3.361-1.338-.452-1.152-1.107-1.459-1.107-1.459-.905-.619.069-.605.069-.605 1.002.07 1.527 1.028 1.527 1.028.89 1.524 2.336 1.084 2.902.829.091-.645.351-1.085.635-1.334-2.214-.251-4.542-1.107-4.542-4.93 0-1.087.389-1.979 1.024-2.675-.101-.253-.446-1.268.099-2.64 0 0 .837-.269 2.742 1.021a9.582 9.582 0 0 1 2.496-.336 9.554 9.554 0 0 1 2.496.336c1.906-1.291 2.742-1.021 2.742-1.021.545 1.372.203 2.387.099 2.64.64.696 1.024 1.587 1.024 2.675 0 3.833-2.33 4.675-4.552 4.922.355.308.675.916.675 1.846 0 1.334-.012 2.41-.012 2.737 0 .267.178.577.687.479C19.146 20.115 22 16.379 22 11.974 22 6.465 17.535 2 12.026 2z">
+                            </path>
+                        </svg>
+                    </a>
+                    <p class="mx-auto">GitHub</p>
+                </div>
+
+                <div class="flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
+                    <a href="https://www.linkedin.com/in/jehu-frayle/" target="_blank" class="m-auto w-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="fill-slate-100 hover:fill-slate-400 w-full h-full"
+                            viewBox="0 0 24 24" width="24px" height="24px">
+                            <path
+                                d="M20 3H4a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1zM8.339 18.337H5.667v-8.59h2.672v8.59zM7.003 8.574a1.548 1.548 0 1 1 0-3.096 1.548 1.548 0 0 1 0 3.096zm11.335 9.763h-2.669V14.16c0-.996-.018-2.277-1.388-2.277-1.39 0-1.601 1.086-1.601 2.207v4.248h-2.667v-8.59h2.56v1.174h.037c.355-.675 1.227-1.387 2.524-1.387 2.704 0 3.203 1.778 3.203 4.092v4.71z">
+                            </path>
+                        </svg>
+                    </a>
+                    <p class="mx-auto">LinkedIn</p>
+                </div>
+
                 <!-- <a>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         style="fill: rgba(0, 0, 0, 1);transform: ;msFilter:;">
@@ -104,14 +122,32 @@
                         </path>
                     </svg>
                 </a> -->
-                <a href="https://twitter.com/JehuFrayle" target="_blank">
-                    <svg xmlns="http://www.w3.org/2000/svg" 
-                        class="fill-slate-100 hover:fill-slate-400" width="24px" height="24px" v>
-                        <path
-                            d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z">
-                        </path>
-                    </svg>
-                </a>
+                <div class="flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
+                    <a href="https://twitter.com/JehuFrayle" target="_blank" class="m-auto w-full">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="fill-slate-100 hover:fill-slate-400 w-full h-full"
+                            viewBox="0 0 24 24" width="24px" height="24px">
+                            <path
+                                d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z">
+                            </path>
+                        </svg>
+                    </a>
+                    <p>Twitter</p>
+                </div>
+
+            </div>
+        </section>
+
+        <section id="Referents" class="p-4 space-y-4">
+            <h2 class="text-2xl text-center my-2">My referents</h2>
+            <p class="text-lg font-bold">People I follow, admire and learn from</p>
+            <p class="w-5/6">I could be something technical, social or just a soft skill, but I've learned something
+                from each and everyone of them.
+                That's why I'm grateful and I like to dedicate this little space to let you know that in the future
+                <b>I'm pointing to be like them</b>
+                in some or other way.
+            </p>
+            <div id="ReferentsTS"
+                class="w-full mx-auto h-auto flex overflow-x-scroll overscroll-x-contain snap-mandatory snap-x space-4">
             </div>
         </section>
     </main>
