Change the avatar animation to use Tailwind keyframes and animation

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
         <section id="Home" class="flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row">
 
-            <div id="Avatar" class="relative w-32 h-32 lg:w-64 lg:h-64 mx-auto my-2">
+            <div id="Avatar" class="relative w-32 h-32 lg:w-64 lg:h-64 mx-auto my-2 rounded-full animate-avatar-animation">
                 <div class="absolute w-full h-full inset-0 rounded-full bg-sky-500 blur-md"></div>
                 <img src="<%=require('../src/assets/avatar.jpg')%>" alt="Jehú Frayle"
                     class="relative w-full h-full rounded-full outline outline-sky-500 outline-offset-2t" />
@@ -39,7 +39,8 @@
                 <p class="text-lg text-left">Hello there,</p>
                 <h1 class="p-4 text-7xl font-bold italic">This is <span
                         class="pr-4 bg-clip-text text-transparent bg-gradient-to-r from-[#F7DF1E] to-[#3178C6]"><span
-                            class="pr-2 lg:p-0">Jehú</span> Frayle</span></h1>
+                            class="pr-2 lg:p-0">Jehú</span> Frayle</span>
+                </h1>
                 <p class="text-xl text-center tracking-widest w-full mx-auto lg:tracking-[.75rem] text-[#F7DF1E]">
                     JavaScript Developer
                 </p>
@@ -140,7 +141,7 @@
         <section id="Referents" class="p-4 space-y-4">
             <h2 class="text-2xl text-center my-2">My referents</h2>
             <p class="text-lg font-bold">People I follow, admire and learn from</p>
-            <p class="w-5/6">I could be something technical, social or just a soft skill, but I've learned something
+            <p class="w-5/6">It could be something technical, social or just a soft skill, but I've learned something
                 from each and everyone of them.
                 That's why I'm grateful and I like to dedicate this little space to let you know that in the future
                 <b>I'm pointing to be like them</b>
