Add some animations while scrolling

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </header>
     <main class="mt-8 mx-4 lg:mx-16">
 
-        <section id="Home" class="flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row">
+        <section id="Home" class="hideTS flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row">
 
             <div id="Avatar" class="relative w-32 h-32 lg:w-64 lg:h-64 mx-auto my-2 rounded-full animate-avatar-animation">
                 <div class="absolute w-full h-full inset-0 rounded-full bg-sky-500 blur-md"></div>
@@ -54,7 +54,7 @@
             <p>I’m Jehú Frayle, an IT student with proficiency in web development. I build functional, reliable, and
                 <strong>fully responsive</strong> websites and applications.
             </p>
-            <p>I have an unstoppable curiosity, and with optimism and discipline, I’m sure I can build almost anything.
+            <p class="hidden">I have an unstoppable curiosity, and with optimism and discipline, I’m sure I can build almost anything.
                 For the rest, I’ll need a team, because I think <strong>teamwork</strong> is the key.</p>
             <p>I’ve learned to use technologies like <strong>TypeScript</strong>,
                 <strong>Tailwindcss</strong>, <strong>Node.js</strong>, etc. And of course, I can use the fundamental
@@ -82,7 +82,7 @@
                 <a href="https://github.com/jehufrayle" target="_blank" class="underline">GitHub</a>.
             </p>
             <!-- Aquí van los proyectos con TS -->
-            <div id="ProjectsTS" class="p-2 w-full h-auto flex flex-wrap justify-center md:space-8"></div>
+            <div id="ProjectsTS" class="hideTS p-2 w-full h-auto flex flex-wrap justify-center md:space-8"></div>
         </section>
 
         <section id="Contact" class="pt-8 p-2 space-y-4">
@@ -91,7 +91,7 @@
             <p>Add me to your proffesional network at LinkedIn</p>
             <p>Or reach me at Twitter for a less formal approach.</p>
             <div class="flex w-full justify-evenly m-4">
-                <div class="flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
+                <div class="hideTS flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
                     <a href="https://github.com/JehuFrayle" target="_blank" class="m-auto w-full">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-slate-100 hover:fill-slate-400 w-full h-full"
                             viewBox="0 0 24 24" width="24px" height="24px">
@@ -103,7 +103,7 @@
                     <p class="mx-auto">GitHub</p>
                 </div>
 
-                <div class="flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
+                <div class="hideTS flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
                     <a href="https://www.linkedin.com/in/jehu-frayle/" target="_blank" class="m-auto w-full">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-slate-100 hover:fill-slate-400 w-full h-full"
                             viewBox="0 0 24 24" width="24px" height="24px">
@@ -123,7 +123,7 @@
                         </path>
                     </svg>
                 </a> -->
-                <div class="flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
+                <div class="hideTS flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
                     <a href="https://twitter.com/JehuFrayle" target="_blank" class="m-auto w-full">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-slate-100 hover:fill-slate-400 w-full h-full"
                             viewBox="0 0 24 24" width="24px" height="24px">
@@ -152,7 +152,7 @@
             </div>
         </section>
     </main>
-    <footer class="w-full text-center my-4">Made with love by<a href="https://jehufrayle.com"> Jehú </a>💜</footer>
+    <footer class="w-full text-center my-4">Made with love and coffee by<a href="https://jehufrayle.com"> Jehú </a>💜</footer>
 </body>
 
 </html>
