Fix some issues, know them in the README

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             </svg>
         </button>
     </header>
-    <main class="mt-8 mx-4 lg:mx-16">
+    <main class="mt-8 mx-4 lg:mx-16 overflow-x-hidden">
 
         <section id="Home" class="hideTS flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row">
 
@@ -90,7 +90,7 @@
             <p>Read the code of my projects, colaborate with me and stay up to my work on GitHub.</p>
             <p>Add me to your proffesional network at LinkedIn</p>
             <p>Or reach me at Twitter for a less formal approach.</p>
-            <div class="flex w-full justify-evenly m-4">
+            <div class="flex w-full justify-evenly mx-auto">
                 <div class="hideTS flex flex-col align-middle space-y-2 text-center w-1/6 md:w-1/12">
                     <a href="https://github.com/JehuFrayle" target="_blank" class="m-auto w-full">
                         <svg xmlns="http://www.w3.org/2000/svg" class="fill-slate-100 hover:fill-slate-400 w-full h-full"
