added platzi store project. added angular in techGenerator

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="https://projects.jehufrayle.com/resources/favicon.png" type="image/x-icon">
     <title>Jehú Frayle</title>
 </head>
 
@@ -28,11 +29,11 @@
     </header>
     <main class="mt-8 mx-4 lg:mx-16 overflow-x-hidden">
 
-        <section id="Home" class="hideTS flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row">
+        <section id="Home" class="hideTS flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row border-b-[1px]">
 
             <div id="Avatar" class="relative w-32 h-32 lg:w-64 lg:h-64 mx-auto my-2 rounded-full animate-avatar-animation">
                 <div class="absolute w-full h-full inset-0 rounded-full bg-sky-500 blur-md"></div>
-                <img src="<%=require('../src/assets/avatar.jpg')%>" alt="Jehú Frayle"
+                <img src="https://projects.jehufrayle.com/public/f236339547f2d3d47e57.jpg" alt="Jehú Frayle"
                     class="relative w-full h-full rounded-full outline outline-sky-500 outline-offset-2t" />
             </div>
             <div class="flex flex-col space-y-3 m-auto">
@@ -46,8 +47,6 @@
                 </p>
             </div>
         </section>
-
-        <hr>
 
         <section id="About" class="text-md mx-auto space-y-4 p-4 pt-8">
             <h2 class="text-2xl text-center my-2">About me</h2>
