--- a/public/index.html
+++ b/public/index.html
@@ -32,9 +32,9 @@
         <section id="Home" class="hideTS flex flex-col justify-around w-full h-auto text-center p-4 pt-10 md:flex-row border-b-[1px]">
 
             <div id="Avatar" class="relative w-32 h-32 lg:w-64 lg:h-64 mx-auto my-2 rounded-full animate-avatar-animation">
-                <div class="absolute w-full h-full inset-0 rounded-full bg-sky-500 blur-md"></div>
+                <div class="absolute w-full inset-0 rounded-full bg-sky-500 blur-md"></div>
                 <img src="https://projects.jehufrayle.com/public/f236339547f2d3d47e57.jpg" alt="Jehú Frayle"
-                    class="relative w-full h-full rounded-full outline outline-sky-500 outline-offset-2t" />
+                    class="relative w-full rounded-full outline outline-sky-500 outline-offset-2t" />
             </div>
             <div class="flex flex-col space-y-3 m-auto">
                 <p class="text-lg text-left">Hello there,</p>
